# solkyn

./: .env.example  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
configs/: default.example.yaml
docker/: Dockerfile.kali  docker-compose.yaml
docker/scripts/: browser_helper.py  jsfuck_gen.py  oob_catcher.py
docs/: results-summary.md  xbow-challenge-inventory.json
results/: aggregate-summary.json  leaderboard.md  per-class.md  per-level.md  refusal-summary.md  smoke.md  solver-selection.md  unsolved.md
scans/public_smoke_azure/: results-s9-1783281729.json
scripts/: aggregate_results.py  run_challenges.py  run_full_sweep.py  smoke_all_models.py  xbow_inventory.py
solkyn/agents/: attempt_dir.py  exit_reasons.py  flag_detector.py  orchestrator.py  progress_summarizer.py  prompt_builder.py  repro_metadata.py  result.py  solver.py  state.py
solkyn/cli/: main.py
solkyn/config/: loader.py  schema.py
solkyn/core/: __init__.py  cost.py  deadline.py  reporting.py
solkyn/llm/: config.py  lmstudio.py  manager.py  tools.py
solkyn/observability/: display.py  events.py
solkyn/reporting/: report_generator.py
solkyn/tools/: container.py  executor.py  oob_catcher.py  pty_executor.py  pty_session.py  registry.py  safety.py
tests/: test_aggregate_results.py  test_oob_catcher.py  test_run_full_sweep.py  test_smoke_all_models.py
tests/integration/: test_container_manager.py  test_cross_network.py  test_docker_image.py  test_executor.py
tests/unit/: test_attempt_dir.py  test_compaction.py  test_config_cli.py  test_exit_reasons.py  (+27 more)
(+36 files in other folders)
