[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solkyn"
version = "0.1.0"
description = "Autonomous Penetration Testing Agent"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pexpect>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
solkyn = "solkyn.cli.main:cli"

[tool.setuptools.packages.find]
include = ["solkyn*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services (Docker, APIs)",
]
